<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Potions</string>
    <string name="action_settings">Settings</string>
    <string name="default_score">0</string>
    <string name="negative_score_alert">Score couldn\'t be negative</string>
    <string name="show_winner_menu_item">Show Winners</string>
    <string name="clear_results_menu_item">Clear Results</string>
    <string name="about_menu_item">About</string>
    <string name="about_alert_title">About</string>
    <string name="about_alert_message">About message here :)</string>
    <string name="close_button_title">Close</string>
    <string name="show_winner_dialog_title">Game Result</string>
    <string name="clear_results_button_title">Clear Results</string>
    <string name="plus_label">+</string>
    <string name="minus_label">-</string>
    <string name="reset_score_dialog_title">Reset Score!</string>
    <string name="reset_score_message">Are you sure?</string>
    <string name="yes_title">Yep</string>
    <string name="no_title">Nope</string>
    <string name="set_player_name_title">Set Player Name</string>
    <string name="ok_button_label">OK</string>
    <string name="reset_player_names">Reset Players Names</string>
    <string name="reset_player_names_title">Reset Player Names</string>
    <string name="default_player_name">Player</string>
    <string name="winners_header">Winner(s): </string>


</resources>
