<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity" >
    <item android:id="@+id/action_show_winner_menu"
        android:title="@string/show_winner_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_clear_results_menu"
        android:title="@string/clear_results_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_reset_player_names_menu"
        android:title="@string/reset_player_names"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_about_menu"
        android:title="@string/about_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
