<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="0dp"
            android:layout_weight="75"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/default_score"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonPlus"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:longClickable="true"
                android:padding="5dp"
                android:text="@string/plus_label"
                android:textSize="18dp" />

            <Button
                android:id="@+id/buttonMinus"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:longClickable="true"
                android:padding="5dp"
                android:text="@string/minus_label"
                android:textSize="18dp" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
